--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,9 @@ header {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
   }
   
   .btn:hover {
