--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #1b0bca;
+    color: #d80d0d;
     padding: 20px;
     text-align: center;
   }
@@ -16,11 +16,12 @@ header {
   nav {
     display: flex;
     justify-content: space-between;
+    
   }
   
   .btn {
-    background-color: #444;
-    color: #fff;
+    background-color: #7a0303;
+    color: #530b9c;
     border: none;
     padding: 10px 20px;
     font-size: 16px;
